# winiutils

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  README.md  SECURITY.md  branch-protection.json  mkdocs.yml  prek.toml  pyproject.toml
.github/: pull_request_template.md  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  build.yml  deploy.yml  health_check.yaml  health_check.yml  publish.yaml  release.yaml  release.yml
docs/: api.md  data.md  index.md  iterating.md  oop.md  security.md
src/winiutils/core/data/dataframe/: cleaning.py
src/winiutils/core/data/structures/: dicts.py
src/winiutils/core/data/structures/text/: string_.py
src/winiutils/core/iterating/concurrent/: concurrent.py  multiprocessing.py  multithreading.py
src/winiutils/core/oop/mixins/: meta.py  mixin.py
src/winiutils/core/security/: cryptography.py  keyring.py
src/winiutils/rig/tests/fixtures/: fixtures.py
src/winiutils/rig/tools/: pyrigger.py
tests/: conftest.py  test_zero.py
tests/test_winiutils/: test_main.py
tests/test_winiutils/test_core/test_data/test_dataframe/: test_cleaning.py
tests/test_winiutils/test_core/test_data/test_structures/: test_dicts.py
tests/test_winiutils/test_core/test_data/test_structures/test_text/: test_string_.py
tests/test_winiutils/test_core/test_iterating/: test_iterate.py
tests/test_winiutils/test_core/test_iterating/test_concurrent/: test_concurrent.py  test_multiprocessing.py  test_multithreading.py
tests/test_winiutils/test_core/test_oop/test_mixins/: test_meta.py  test_mixin.py
tests/test_winiutils/test_core/test_security/: test_cryptography.py  test_keyring.py
tests/test_winiutils/test_dev/test_tests/test_fixtures/: test_fixtures.py
tests/test_winiutils/test_rig/test_tools/: test_pyrigger.py
tests/test_winiutils/test_src/test_data/test_dataframe/: test_cleaning.py
tests/test_winiutils/test_src/test_data/test_structures/: test_dicts.py
tests/test_winiutils/test_src/test_data/test_structures/test_text/: test_string.py  test_string_.py
tests/test_winiutils/test_src/test_iterating/: test_iterate.py
tests/test_winiutils/test_src/test_iterating/test_concurrent/: test_concurrent.py  test_multiprocessing.py  test_multithreading.py
tests/test_winiutils/test_src/test_oop/test_mixins/: test_meta.py
tests/test_winiutils/test_src/test_security/: test_cryptography.py  test_keyring.py
winiutils/: main.py
winiutils/rig/tools/: pyrigger.py
winiutils/src/: __init__.py
winiutils/src/iterating/: iterate.py
winiutils/src/security/: keyring.py
