[project]
name = "winiutils"
version = "2.2.17"
description = "A package with many utility functions"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Winipedia"},
]
readme = "README.md"
dependencies = [
    "cryptography",
    "defusedxml",
    "keyring",
    "keyrings-alt",
    "polars",
    "pyrig",
    "tqdm",
]

[project.scripts]
winipedia-utils = "pyrig.dev.cli.cli:main"
winiutils = "pyrig.dev.cli.cli:main"

[dependency-groups]
dev = [
    "bandit",
    "mypy",
    "pre-commit",
    "pyinstaller",
    "pytest",
    "pytest-mock",
    "ruff",
    "types-defusedxml",
    "types-pyinstaller",
    "types-pyyaml",
    "types-setuptools",
    "types-tqdm",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "winiutils"
module-root = ""

[tool.ruff]
exclude = [
    ".*",
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.bandit]
exclude_dirs = [
    ".*",
]

[tool.bandit.assert_used]
skips = [
    "*test_*.py",
]
