[project]
name = "winiutils"
version = "2.9.1"
description = "A utility library for Python development"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "cryptography",
    "defusedxml",
    "keyring",
    "keyrings-alt",
    "polars",
    "pyrig",
    "tqdm",
]
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
winiutils = "pyrig.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/winiutils"
Documentation = "https://Winipedia.github.io/winiutils"
Source = "https://github.com/Winipedia/winiutils"
Issues = "https://github.com/Winipedia/winiutils/issues"
Changelog = "https://github.com/Winipedia/winiutils/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "deptry>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "pip-audit>=2.10.0",
    "prek>=0.3.2",
    "pyrig-dev",
    "pyrig-pypi>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "rumdl>=0.1.17",
    "ty>=0.0.16",
    "types-defusedxml>=0.7.0.20250822",
    "types-tqdm>=4.67.3.20260205",
    "typos>=1.47.2",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=winiutils --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.ty.terminal]
error-on-warning = true

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*/test_*/*.py",
]

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig",
]
